--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.1.3",
     "@prisma/client": "^6.5.0",
+    "@types/stripe": "^8.0.417",
     "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.13",
     "express": "^5.1.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "stripe": "^18.0.0",
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
   },
