--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/stripe": "^8.0.417",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "express": "^5.1.0",
     "passport-jwt": "^4.0.1",
