--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:cov": "vitest run --coverage",
     "test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
     "test:e2e": "vitest run --config ./vitest.config.e2e.ts",
-    "prepare": "husky"
+    "prepare": "husky",
+    "postinstall": "prisma migrate deploy && prisma generate"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
