--- a/.github/workflows/run-unit-test.yml
+++ b/.github/workflows/run-unit-test.yml
@@ -11,7 +11,7 @@ jobs:
     name: Run Unit Tests
     runs-on: ubuntu-latest
     env:
-      DATABASE_URL: 'postgresql://localhost:5432/testdb'
+      SKIP_PRISMA_POSTINSTALL: true
 
     steps:
       - uses: actions/checkout@v4
