--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
     "test:e2e": "vitest run --config ./vitest.config.e2e.ts",
     "prepare": "husky",
-    "postinstall": "prisma migrate deploy && prisma generate"
+    "postinstall": "tsx scripts/postinstall.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
