--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "stripe": "^18.0.0",
+    "tsx": "^4.19.4",
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
   },
