--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "rxjs": "^7.8.1",
     "stripe": "^18.0.0",
     "tsx": "^4.19.4",
+    "ua-parser-js": "^2.0.3",
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
   },
