--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "express": "^5.1.0",
+    "nodemailer": "^7.0.3",
     "openai": "^4.102.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
