--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "express": "^5.1.0",
+    "googleapis": "^150.0.1",
     "nodemailer": "^7.0.3",
     "openai": "^4.102.0",
     "passport-jwt": "^4.0.1",
@@ -58,6 +59,7 @@
     "@swc/core": "^1.11.13",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^3.0.9",
