--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 DATABASE_URL="postgresql://docker:docker@localhost:5432/finance-ia-db?schema=public"
 PORT=3001
-JWT_PRIVATE_KEY=""
 
+#JWT
+JWT_PRIVATE_KEY=""
 JWT_PUBLIC_KEY=""
 
 #stripe
@@ -9,7 +10,18 @@ STRIPE_PREMIUM_PLAN_PRICE_ID=""
 STRIPE_SECRET_KEY=""
 STRIPE_WEBHOOK_SECRET=""
 
+#crypto
+CRYPTO_SECRET_KEY=""
+
+#openai
 OPENAI_API_KEY=""
+
+#email
+EMAIL_REDIRECT_URI=""
+EMAIL_REFRESH_TOKEN=""
+EMAIL_CLIENT_SECRET=""
+EMAIL_CLIENT_ID=""
+EMAIL_USER=""
 
 APP_URL=""
 SKIP_PRISMA_POSTINSTALL="false"
